--- a/modules/02-programming-in-depth/rust/Cargo.toml
+++ b/modules/02-programming-in-depth/rust/Cargo.toml
@@ -14,3 +14,7 @@ anyhow = "1.0"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
 tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
+tower-http = { version = "0.5", features = ["trace"] }
+
+[dev-dependencies]
+tower = "0.4"
