--- a/modules/02-programming-in-depth/rust/Cargo.toml
+++ b/modules/02-programming-in-depth/rust/Cargo.toml
@@ -15,6 +15,7 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
 tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
 tower-http = { version = "0.5", features = ["trace"] }
+uuid = { version = "1.8", features = ["v4"] }
 
 [dev-dependencies]
 tower = { version = "0.4", features = ["util"] }
